--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "deploy": "cdk deploy",
+    "deploy": "tsc && cdk deploy",
     "destroy": "cdk destroy"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.119.0",
     "@aws-cdk/aws-lambda": "^1.120.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.120.0",
+    "@aws-cdk/aws-sns": "^1.120.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.120.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "aws-cdk": "1.119.0",
