--- a/package.json
+++ b/package.json
@@ -18,19 +18,17 @@
     "@aws-cdk/aws-lambda-nodejs": "^1.120.0",
     "@aws-cdk/aws-sns": "^1.120.0",
     "@aws-cdk/aws-sns-subscriptions": "^1.120.0",
+    "@aws-cdk/core": "^1.123.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "@types/superagent": "^4.1.12",
     "aws-cdk": "1.119.0",
     "jest": "^26.4.2",
+    "monocdk": "^1.122.0",
+    "source-map-support": "^0.5.20",
+    "superagent": "^6.1.0",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
-  },
-  "dependencies": {
-    "@aws-cdk/core": "1.119.0",
-    "monocdk": "^1.120.0",
-    "source-map-support": "^0.5.16",
-    "superagent": "^6.1.0"
   }
 }
