--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "deploy": "npx cdk deploy",
+    "deploy": "cdk deploy",
     "destroy": "cdk destroy",
     "synth": "cdk synth"
   },
