--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "deploy": "npx cdk deploy --require-approval never",
     "destroy": "cdk destroy",
-    "synth": "cdk synth"
+    "synth": "cdk synth --no-staging > template.yaml"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.119.0",
@@ -19,6 +19,7 @@
     "@aws-cdk/aws-sns": "^1.120.0",
     "@aws-cdk/aws-sns-subscriptions": "^1.120.0",
     "@aws-cdk/core": "^1.123.0",
+    "@monocdk-experiment/assert": "^1.124.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "@types/superagent": "^4.1.12",
