--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install dependencies
         run: yarn
 
+      - name: Run Unit tests
+        run: yarn test
+
       - name: Deploy
         run: yarn deploy
         env:
