--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@aws-cdk/aws-sns": "^1.120.0",
     "@aws-cdk/aws-sns-subscriptions": "^1.120.0",
     "@aws-cdk/core": "^1.123.0",
+    "@aws-sdk/client-sns": "^3.34.0",
     "@monocdk-experiment/assert": "^1.124.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "@types/superagent": "^4.1.12",
     "aws-cdk": "1.123.0",
+    "aws-sdk-client-mock": "^0.5.5",
     "jest": "^26.4.2",
     "monocdk": "^1.122.0",
     "source-map-support": "^0.5.20",
