--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "deploy": "npx cdk deploy --require-approval never",
+    "deploy": "cdk deploy --require-approval never",
     "destroy": "cdk destroy",
     "synth": "cdk synth --no-staging > template.yaml"
   },
