--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@aws-cdk/aws-sns": "^1.120.0",
     "@aws-cdk/aws-sns-subscriptions": "^1.120.0",
     "@aws-cdk/core": "^1.123.0",
+    "@aws-sdk/client-dynamodb": "^3.178.0",
     "@aws-sdk/client-sns": "^3.34.0",
     "@monocdk-experiment/assert": "^1.124.0",
     "@types/jest": "^26.0.10",
@@ -26,12 +27,12 @@
     "@types/superagent": "^4.1.12",
     "aws-cdk": "1.123.0",
     "aws-sdk-client-mock": "^0.5.5",
-    "jest": "^26.4.2",
+    "jest": "^29.1.1",
     "monocdk": "^1.122.0",
     "source-map-support": "^0.5.20",
-    "superagent": "^6.1.0",
-    "ts-jest": "^26.2.0",
-    "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "superagent": "^8.0.0",
+    "ts-jest": "^29.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
